--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Congregational churches -- Missions -- Periodicals'
 - !lcc 'BV'
 - !lcsh 'Home missions -- Periodicals'
+- GITenberg
 title: The American Missionary — Volume 43, No. 09, September, 1889
 url: http://www.gutenberg.org/ebooks/16154
